# ppi-scout

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/release-notes/: v0.5.0.md
.github/workflows/: build-offline-runtimes.yml  ci.yml  update-release-metadata.yml
docs/: ARCHITECTURE.md  HELIXFOLD3.md  HELIXFOLD3_CLOUD.md  HELIXFOLD3_CODEX_HANDOFF.md  README.md  RELEASE_CHECKLIST.md  USER_GUIDE.md
examples/: README.md  atg19-aim-scan-and-panel.json  atg8-atg19-job.json  atg8-scer-p38182.fasta  atg8-yta7-fdfl-job.json  atg8-yta7-job.json  atg8.fasta  helixfold3-yta7-panel.json  yta7-43-66.fasta
locales/: en.json  ja.json  zh-CN.json
offline/: README.md
offline/macos/: Run-PPI-Scout-macOS.command
offline/models/: README.md  SHA256SUMS
offline/msas/: README.md
offline/windows/: Run-PPI-Scout-Windows.cmd  install-and-run.ps1  install-and-run.sh
portable/: README.md
portable/macos/: Run-PPI-Scout-macOS.command
portable/models/: README.md
portable/msas/: README.md
portable/windows/: Run-PPI-Scout-Windows.cmd  install-and-run.ps1  install-and-run.sh
scripts/: build_offline_package.py  prepare_offline_release.py  validate_helixfold3_panel.py
src/ppi_scout/: cli.py  (+14 more)
tests/: test_boltz_backend.py  test_build_offline_package.py  test_cli.py  test_executor.py  test_helixfold3_panel.py  test_motif_scan.py  test_msa_library.py  test_offline.py  test_package_metadata.py  test_panel_execution.py  test_peptide_design.py  test_prepare_offline_release.py  test_resolver.py  test_router.py  test_visualization.py
(+11 files in other folders)
